--- a/admin-dashboard-backend/package.json
+++ b/admin-dashboard-backend/package.json
@@ -12,11 +12,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@graphql-tools/schema": "^10.0.4",
+    "apollo-server-core": "^3.13.0",
     "apollo-server-express": "^3.13.0",
     "express": "^4.19.2",
     "graphql": "^16.8.1",
+    "graphql-subscriptions": "^2.0.0",
+    "graphql-ws": "^5.16.0",
+    "http": "^0.0.1-security",
     "mysql2": "^3.9.7",
-    "sequelize": "^6.37.3"
+    "sequelize": "^6.37.3",
+    "ws": "^8.17.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
