--- a/admin-dashboard-frontend/package.json
+++ b/admin-dashboard-frontend/package.json
@@ -8,8 +8,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bad-words": "^3.0.4",
+    "chart.js": "^4.4.3",
     "graphql": "^16.8.1",
+    "graphql-ws": "^5.16.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
