--- a/backend/package.json
+++ b/backend/package.json
@@ -9,10 +9,17 @@
     "sequelize": "^6.37.3"
   },
   "devDependencies": {
-    "nodemon": "^3.1.0"
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.0",
+    "supertest": "^7.0.0"
   },
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "jest"
+  },
+  "jest": {
+  "testEnvironment": "node",
+  "testPathIgnorePatterns": ["/node_modules/"]
   }
 }
