--- a/admin-dashboard-backend/package.json
+++ b/admin-dashboard-backend/package.json
@@ -20,7 +20,8 @@
     "graphql-subscriptions": "^2.0.0",
     "graphql-ws": "^5.16.0",
     "http": "^0.0.1-security",
-    "mysql2": "^3.9.7",
+    "pg": "^8.16.3",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.3",
     "ws": "^8.17.0"
   },
