--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.9.7",
+    "pg": "^8.16.3",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.3"
   },
   "devDependencies": {
@@ -19,7 +20,9 @@
     "test": "jest"
   },
   "jest": {
-  "testEnvironment": "node",
-  "testPathIgnorePatterns": ["/node_modules/"]
+    "testEnvironment": "node",
+    "testPathIgnorePatterns": [
+      "/node_modules/"
+    ]
   }
 }
